k8s/gitsync-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: navav2
patch: |-
  [...]
