k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: navav2
spec:
  type: ClusterIP
  selector:
    app: navav2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
